<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity"
    android:background="@drawable/background_upload">

    <EditText
        android:id="@+id/editTextBreed"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/breedHint"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.095" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/AgeHint"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBreed"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="274dp"
        android:layout_height="32dp"
        android:text="@string/subtitle_upload"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <EditText
        android:id="@+id/editTextColor"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/colorHint"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge"
        app:layout_constraintVertical_bias="0.1" />

    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_width="195dp"
        android:layout_height="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextColor"
        app:layout_constraintVertical_bias="0.164">

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/FemaleRadio"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.731"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.061" />

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/MaleRadio"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/radioButton2"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.061" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="228dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/uploadBtn"
        android:textColor="@color/white"
        app:cornerRadius="50px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSex"
        app:layout_constraintVertical_bias="0.325" />

    />

</androidx.constraintlayout.widget.ConstraintLayout>