<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/background_home">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/buttonSearchDogs"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/dark_blue"
        android:drawableRight="@drawable/search_icon"
        android:text="@string/findDogSearch"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="50px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUpload"
        app:layout_constraintVertical_bias="0.126" />

    <Button
        android:id="@+id/buttonLogInHome"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/dark_blue"
        android:text="Log In"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="50px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearchDogs"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/textViewUpload"
        android:layout_width="302dp"
        android:layout_height="18dp"
        android:text="@string/goToUpload_btn"
        android:textColor="@color/dark_blue"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogInHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearchDogs" />
</androidx.constraintlayout.widget.ConstraintLayout>